Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-17009

forestdb hangs during the initial index build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.0.0, 4.1.0
    • forestdb, secondary-index
    • Security Level: Public
    • None

    Description

      Index build is getting hang in Forestdb. The goroutine dump shows that compaction thread and a forestdb getkv call are stuck.

      2 @ 0x4065e5 0x480c73 0x48ba44 0x4a3aee 0x4a0d60 0x49ffbc 0x49fb70 0x42d8e1
      0x480c73 github.com/couchbase/indexing/secondary/fdb._Cfunc_fdb_get_kv+ 0x43 /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/ couchbase/indexing/secondary/fdb/:172

      1 @ 0x4065e5 0x480693 0x484b5b 0x4a7b42 0x54b013 0x42d8e1
      0x480693 github.com/couchbase/indexing/secondary/fdb._Cfunc_fdb_compact_upto+0x43 /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/ indexing/secondary/fdb/:64

      The goroutine dump can be captured via:

      curl <ip>:9102/debug/pprof/goroutine?debug=1 -u Administrator:<password> > pprof.out

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-17009
          # Subject Branch Project Status CR V

          Activity

            People

              siri Sriram Melkote (Inactive)
              bastian Bastian VS (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty