secondary/cmd/indexer/main.go
@@ -58,9 +58,8 @@ func main() {
 	logging.SetLogLevel(logging.Level(*logLevel))
 	forestdb.Log = &logging.SystemLogger
 
-	// Setup Breakpad - to catch forestDB fatal errors.
-	indexer.BreakpadInitialize(*diagDir)
-	forestdb.SetFatalErrorCallback(indexer.BreakpadGetWriteMinidumpAsUintptr())
+	// Setup Breakpad to catch forestDB fatal errors.
+	forestdb.InitBreakpadForFDB(*diagDir)
 
 	// setup cbauth
 	if *auth != "" {
